Update README with new build and packaging instructions. Update pom.xml resource exclusions